Bug 492336 - .ics calendar files don't show up on the file chooser
Summary: .ics calendar files don't show up on the file chooser
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: import/export (other bugs)
Version First Reported In: 6.2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-28 19:36 UTC by Roguefort
Modified: 2025-04-13 15:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roguefort 2024-08-28 19:36:00 UTC
SUMMARY
When attempting to import a .ics calendar from KOrganizer, the file doesn't show up on the file chooser.

STEPS TO REPRODUCE
1. Go to "Add a calendar" from the calendar manager or KOrganizer's calendar settings
2. Select "File from iCal Calendar" 
3. Select the .ics calendar file

OBSERVED RESULT
The .ics calendar file doesn't show up on the file chooser. The only workaround is the name

EXPECTED RESULT
The .ics calendar file shows up.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.6-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
Not sure if this is the correct way of importing a .ics calendar file, but online sources suggest that it's this way.

I have a video showcasing the bug, but it's 7.8 MBs, a bit above the 4 MB file limit.
Comment 1 Bug Janitor Service 2025-03-05 18:18:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/202
Comment 2 Allen Winter 2025-03-07 15:22:03 UTC
Git commit 6515630020b19f8b2dad27a66c2f4b9d3c7bf885 by Allen Winter.
Committed on 07/03/2025 at 15:20.
Pushed by winterz into branch 'master'.

iCal File resource - fix create dialog "File or URL" filter

Rely on KUrlRequester to do the right thing.
With this patch the open file dialog shows the filter "VCS/ICS calendar"
and properly filters .ics files.

Previousy, the open file dialog showed the filter "text/calendar"
and didn't filter .ics files.

M  +0    -1    resources/ical/icalconfig.cpp
M  +2    -0    resources/shared/singlefileresource/singlefileresourceconfigwidgetbase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/6515630020b19f8b2dad27a66c2f4b9d3c7bf885
Comment 3 Allen Winter 2025-03-07 15:22:41 UTC
Git commit 42bc0a9d031a82bafe45e2356ee34478110f7f45 by Allen Winter.
Committed on 07/03/2025 at 15:22.
Pushed by winterz into branch 'release/24.12'.

iCal File resource - fix create dialog "File or URL" filter

Rely on KUrlRequester to do the right thing.
With this patch the open file dialog shows the filter "VCS/ICS calendar"
and properly filters .ics files.

Previousy, the open file dialog showed the filter "text/calendar"
and didn't filter .ics files.


(cherry picked from commit 6515630020b19f8b2dad27a66c2f4b9d3c7bf885)

Co-authored-by: Allen Winter <winter@kde.org>

M  +0    -1    resources/ical/icalconfig.cpp
M  +2    -0    resources/shared/singlefileresource/singlefileresourceconfigwidgetbase.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/42bc0a9d031a82bafe45e2356ee34478110f7f45
Comment 4 Roguefort 2025-04-12 20:49:57 UTC
Still occurs on Plasma 6.3.4. Unfortunately, this bug hasn't been fixed.

ADDITIONAL INFORMATION
A workaround for this bug is to go to the folder where the .ics file is located and paste the name of the file + the .ics extension.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.13.10-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 5 Allen Winter 2025-04-13 11:50:23 UTC
which KOrganizer version are  you using?
Comment 6 Roguefort 2025-04-13 14:08:40 UTC
(In reply to Allen Winter from comment #5)
> which KOrganizer version are  you using?

6.3.3 (24.12.3)
Comment 7 Allen Winter 2025-04-13 15:30:34 UTC
you're right.
the fix doesn't land until version 25.04