iCal File resource - fix create dialog "File or URL" filter

Rely on KUrlRequester to do the right thing.
With this patch the open file dialog shows the filter "VCS/ICS calendar"
and properly filters .ics files.

Previousy, the open file dialog showed the filter "text/calendar"
and didn't filter .ics files.

BUG: 492336